--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^6.0.0",
     "@neondatabase/serverless": "^0.10.4",
-    "astro": "^5.2.1"
+    "@tailwindcss/vite": "^4.0.3",
+    "astro": "^5.2.1",
+    "tailwindcss": "^3.4.17"
   }
 }
